name:          Holumbus-MapReduce
version:       0.1
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Stefan Schmidt
copyright:     Copyright (c) 2008 Uwe Schmidt, Stefan Schmidt
maintainer:    Stefan Schmidt <sts@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      A distributed map-reduce framework
homepage:      http://holumbus.fh-wedel.de
description:   this package contains Erlang-Style Mailboxes, a distributed filesystem and a distributed mapreduce framework
cabal-version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  Build-Depends:  base >= 3
                , haskell98
                , hslogger
                , directory
                , containers
                , old-time
                , time
                , parallel
                , parsec
                , network
                , bytestring
                , unix
                , utf8-string
                , hxt
                , binary
                , bzlib
                , regex-compat
                , readline
                , Holumbus-Searchengine

  hs-source-dirs: 
                  source
  exposed-modules:  
                  Holumbus.Distribution.Distribution
                , Holumbus.Distribution.Messages
                , Holumbus.Distribution.Worker
                , Holumbus.Distribution.Worker.WorkerData
                , Holumbus.Distribution.Worker.WorkerPort
                , Holumbus.Distribution.Master
                , Holumbus.Distribution.Master.MasterData
                , Holumbus.Distribution.Master.MasterPort
                , Holumbus.Standalone.Standalone
                , Holumbus.Data.AccuMap
                , Holumbus.Data.MultiMap
                , Holumbus.MapReduce.MapReduce
                , Holumbus.MapReduce.JobController
                , Holumbus.MapReduce.TaskProcessor
                , Holumbus.MapReduce.Types
                , Holumbus.MapReduce.TypeCheck
                , Holumbus.MapReduce.Demo
                , Holumbus.MapReduce.UserInterface
                , Holumbus.FileSystem.UserInterface
                , Holumbus.FileSystem.FileSystem
                , Holumbus.FileSystem.Storage
                , Holumbus.FileSystem.Storage.FileStorage
                , Holumbus.FileSystem.Messages
                , Holumbus.FileSystem.Node
                , Holumbus.FileSystem.Node.NodeData
                , Holumbus.FileSystem.Node.NodePort
                , Holumbus.FileSystem.Controller
                , Holumbus.FileSystem.Controller.ControllerData
                , Holumbus.FileSystem.Controller.ControllerPort
                , Holumbus.Network.Messages
                , Holumbus.Network.Server
                , Holumbus.Network.Client
                , Holumbus.Network.Port
                , Holumbus.Network.Site
                , Holumbus.Console.Console
                , Holumbus.Common.FileHandling
                , Holumbus.Common.Logging
                , Holumbus.Common.Utils
  ghc-options: -Wall -threaded -O
