name:          Holumbus-Searchengine
version:       0.0.5
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
copyright:     Copyright (c) 2007, 2008 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Hübel
maintainer:    Timo B. Hübel <tbh@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      A distributed search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Holumbus-Searchengine library provides a document indexer and crawler to build indexes over document collections as well as a sophisticated query interface for these indexes.
cabal-version: >=1.2
build-type:    Simple

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  build-depends: base           >= 3
               , haskell98      >= 1.0
               , containers     >= 0.1
               , directory      >= 1.0
               , old-time       >= 1.0
               , parallel       >= 1.0
               , parsec         >= 2.1 && < 3
               , network        >= 2.1
               , bytestring     >= 0.9
               , unix           >= 2.3
               , utf8-string    >= 0.3
               , hxt            >= 8.0
               , binary         >= 0.4
               , bzlib          >= 0.4
               , regex-compat   >= 0.71
               , HDBC           >= 1.1
               , HDBC-sqlite3   >= 1.1
               , pureMD5        >= 0.1.2 && < 0.2

  exposed-modules:
    Holumbus.Utility,
    Holumbus.Build.Crawl,
    Holumbus.Build.Index,
    Holumbus.Build.Config,
    Holumbus.Control.MapReduce.MapReducible,
    Holumbus.Control.MapReduce.ParallelWithClass,
    Holumbus.Control.MapReduce.ParallelWithClassPersistent,
    Holumbus.Control.MapReduce.Parallel,
    Holumbus.Control.Registry,
    Holumbus.Data.Crunch,
    Holumbus.Data.DiffList,
    Holumbus.Data.StrMap,
    Holumbus.Data.Trie,
    Holumbus.Index.Cache,
    Holumbus.Index.Common,
    Holumbus.Index.Compression,
    Holumbus.Index.Documents,
    Holumbus.Index.SmallDocuments,
    Holumbus.Index.Hybrid.Memory,
    Holumbus.Index.Inverted.Memory,
    Holumbus.Index.Inverted.Persistent,
    Holumbus.Index.Inverted.OneFile,
    Holumbus.Index.Inverted.Database,
    Holumbus.Query.Distribution.Client,
    Holumbus.Query.Distribution.Protocol,
    Holumbus.Query.Distribution.Server,
    Holumbus.Query.Language.Parser,
    Holumbus.Query.Language.Grammar,
    Holumbus.Query.Fuzzy,
    Holumbus.Query.Intermediate,
    Holumbus.Query.Processor,
    Holumbus.Query.Ranking,
    Holumbus.Query.Result
  hs-source-dirs: source
  ghc-options: -Wall -O -funbox-strict-fields
