name:          Holumbus-Searchengine
version:       0.0.9
license:       OtherLicense
license-file:  LICENSE
author:        Sebastian M. Schlatt, Timo B. Huebel, Uwe Schmidt
copyright:     Copyright (c) 2007 - 2009 Uwe Schmidt, Sebastian M. Schlatt and Timo B. Huebel
maintainer:    Timo B. Huebel <tbh@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      A distributed search and indexing engine.
homepage:      http://holumbus.fh-wedel.de
description:   The Holumbus-Searchengine library provides a document indexer
               and crawler to build indexes over document collections
               as well as a sophisticated query interface for these indexes.
cabal-version: >=1.6
build-type:    Simple
-- tested-with:   ghc-6.12.1

extra-source-files:
    README
    Makefile
    examples/simplesearch/SimpleSearch.hs
    examples/simplesearch/Makefile
    examples/fh-wedel/Makefile
    examples/fh-wedel/source/FHW/Indexer.hs
    examples/fh-wedel/source/FHW/Search.hs
    examples/Makefile
    examples/benchmark/Benchmark.hs
    examples/benchmark/Makefile
    examples/utilities/Makefile
    examples/utilities/Words.hs
    examples/utilities/Stats.hs
    examples/utilities/Convert.hs
    examples/utilities/Split.hs
    examples/utilities/Update.hs
    examples/utilities/Merge.hs
    examples/utilities/Info.hs
    examples/sitemap/Makefile
    examples/sitemap/Sitemap.hs
    examples/queryserver/Makefile
    examples/queryserver/Server.hs
    examples/hayoo/source/Hayoo/Hebalizer.hs
    examples/hayoo/source/Hayoo/Common.hs
    examples/hayoo/source/Hayoo/Indexer.hs
    examples/hayoo/source/Hayoo/Parser.hs
    examples/hayoo/source/Hayoo/Search.hs
    examples/hayoo/source/Hayoo/HTML.hs
    examples/hayoo/Makefile
    examples/hayoo/Janus.hs
    examples/pagerank/PageRank.hs
    examples/pagerank/Makefile
    examples/cgicomplete/source/Client.hs
    examples/cgicomplete/source/Server.hs
    examples/cgicomplete/Makefile
    test/Holumbus-Tests.cabal
    test/Makefile
    test/data/pickle.xml
    test/AllTests.hs
    test/BinaryTest.hs
    test/CrunchTest.hs
    test/DiffListTest.hs
    test/DocumentsTest.hs
    test/FuzzyTest.hs
    test/InvertedTest.hs
    test/ParserTest.hs
    test/PickleTest.hs
    test/PrefixTreeTest2.hs
    test/PrefixTreeTest.hs
    test/SampleData.hs
    test/SpaceTest.hs
    test/StrMapTest.hs

library
  build-depends: base           >= 4   && < 5
               , haskell98      >= 1.0 && < 2
               , containers     >= 0.1 && < 1
               , directory      >= 1.0 && < 2
               , parallel       >= 1.0 && < 3
               , deepseq        >= 1.1 && < 2
               , parsec         >= 2.1 && < 4
               , network        >= 2.1 && < 3
               , bytestring     >= 0.9 && < 1
               , unix           >= 2.3 && < 3
               , utf8-string    >= 0.3 && < 1
               , hxt            >= 8.5 && < 9
               , hxt-xpath      >= 8.5 && < 9
               , binary         >= 0.4 && < 1
               , bzlib          >= 0.4 && < 1
               , regex-compat   >= 0.71 && < 1
               , HDBC           >= 1.1 && < 3
               , HDBC-sqlite3   >= 1.1 && < 3
               , pureMD5        >= 0.2 && < 2
               , old-time       >= 1   && < 2

  exposed-modules:
    Holumbus.Utility,
    Holumbus.Build.Crawl,
    Holumbus.Build.Index,
    Holumbus.Build.Config,
    Holumbus.Control.MapReduce.MapReducible,
    Holumbus.Control.MapReduce.ParallelWithClass,
    Holumbus.Control.MapReduce.ParallelWithClassPersistent,
    Holumbus.Control.MapReduce.Parallel,
    Holumbus.Control.Registry,
    Holumbus.Data.Crunch
    Holumbus.Data.DiffList
    Holumbus.Data.PrefixTreeCore
    Holumbus.Data.PrefixTreeFuzzySearch
    Holumbus.Data.PrefixTree
    Holumbus.Data.StrMap
    Holumbus.Data.Trie
    Holumbus.Index.Cache,
    Holumbus.Index.Common,
    Holumbus.Index.Compression,
    Holumbus.Index.Documents,
    Holumbus.Index.SmallDocuments,
    Holumbus.Index.Hybrid.Memory,
    Holumbus.Index.Inverted.Memory,
    Holumbus.Index.Inverted.CompressedPrefixMem,
    Holumbus.Index.Inverted.PrefixMem,
    Holumbus.Index.Inverted.Persistent,
    Holumbus.Index.Inverted.OneFile,
    Holumbus.Index.Inverted.Database,
    Holumbus.Query.Distribution.Client,
    Holumbus.Query.Distribution.Protocol,
    Holumbus.Query.Distribution.Server,
    Holumbus.Query.Language.Parser,
    Holumbus.Query.Language.Grammar,
    Holumbus.Query.Fuzzy,
    Holumbus.Query.Intermediate,
    Holumbus.Query.Processor,
    Holumbus.Query.Ranking,
    Holumbus.Query.Result
  hs-source-dirs: source
  ghc-options: -Wall -funbox-strict-fields
  extensions: BangPatterns FlexibleInstances MultiParamTypeClasses
